; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_bgconn.c_btm_ble_initiate_select_conn.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_bgconn.c_btm_ble_initiate_select_conn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [29 x i8] c"btm_ble_initiate_select_conn\00", align 1
@L2CAP_ATT_CID = common dso_local global i32 0, align 4
@BLE_ADDR_UNKNOWN_TYPE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [36 x i8] c"btm_ble_initiate_select_conn failed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @btm_ble_initiate_select_conn(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = call i32 @BTM_TRACE_EVENT(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  %4 = load i32, i32* @L2CAP_ATT_CID, align 4
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @BLE_ADDR_UNKNOWN_TYPE, align 4
  %7 = call i32 @L2CA_ConnectFixedChnl(i32 %4, i32 %5, i32 %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %11, label %9

9:                                                ; preds = %1
  %10 = call i32 @BTM_TRACE_ERROR(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.1, i64 0, i64 0))
  br label %11

11:                                               ; preds = %9, %1
  ret void
}

declare dso_local i32 @BTM_TRACE_EVENT(i8*) #1

declare dso_local i32 @L2CA_ConnectFixedChnl(i32, i32, i32) #1

declare dso_local i32 @BTM_TRACE_ERROR(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
